# Chessy

./: .gitattributes  .gitignore  Chessy.ipynb  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Chessy-checkpoint.ipynb
Leila/: CUDA.txt  README.txt  lc0-training-client-config.json  mimalloc-LICENSE  mimalloc-readme.md
chessy/: Lc0.py  __init__.py  config.py  dataset.py  display.py  features.py  other.py  plots.py  sr.py  tts.py  utils.py
chessy/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Leila0chess.ipynb  SR.ipynb  TTS.ipynb  stockfish.ipynb
stockfish/: 0.26.0  2.12  AUTHORS  CITATION.cff  CONTRIBUTING.md  Copying.txt  README.md  stock.py
